setFacingDirection correctly